# microshop_fastapi

./: .gitignore  README.md  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/versions/: 2025_04_27_1651-b8b282136cff_create_products_table.py  2025_04_27_1750-a4cd2ad437f1_create_users_table.py  2025_04_27_1806-8ceb2c91b824_create_posts_table.py  2025_04_28_1314-f67a22f1d69a_create_profile_table.py  2025_05_02_1203-bbfee7daefbe_create_orders_table.py  2025_05_02_1227-4566acdf9068_create_order_product_association_tables.py  2025_05_02_1239-fc1351855c2e_qwerty.py  2025_05_02_2301-27a5f85b0279_qwerty.py  2025_05_02_2342-e642dc38abda_add_unit_price.py
api_v1/: __init__.py
api_v1/auth/: README.md
api_v1/demo_auth/: demo_jwt_auth.py  views.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  order.py  order_product_association.py  post.py  product.py  user.py
